# citrix-autolaunch

./: .gitignore  Cargo.toml  README.md
src/: citrix.rs  crypto.rs  extract.rs  io.rs  main.rs  maximize.rs  storage.rs
src/citrix/: functions.rs  mod.rs  objects.rs
